<resources>
    <string name="app_name">TRVL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TRVL</string>
    <string name="nav_header_subtitle">Travel Solutions</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_offices">Offices</string>
    <string name="menu_tours">Tours</string>
    <string name="menu_packages">Travel Packages</string>
    <string name="menu_costumers">Costumers</string>
</resources>