<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.iee.trvl.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_offices"
        android:name="com.iee.trvl.ui.offices.OfficesFragment"
        android:label="@string/menu_offices"
        tools:layout="@layout/fragment_offices" />

    <fragment
        android:id="@+id/nav_tours"
        android:name="com.iee.trvl.ui.tours.ToursFragment"
        android:label="@string/menu_tours"
        tools:layout="@layout/fragment_tours" />

    <fragment
        android:id="@+id/nav_packages"
        android:name="com.iee.trvl.ui.packages.PackagesFragment"
        android:label="@string/menu_packages"
        tools:layout="@layout/fragment_packages" />
    <fragment
        android:id="@+id/nav_costumers"
        android:name="com.iee.trvl.ui.costumers.CostumersFragment"
        android:label="@string/menu_costumers"
        tools:layout="@layout/fragment_costumers" />
</navigation>